Swagger integrated and configured to display the current apis
